--- a/GRIP Task-2.ipynb
+++ b/GRIP Task-2.ipynb
@@ -897,7 +897,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visual Represenation of Clusters : K-Means vs Actual for n_clusters=3"
+    "### Visual Representation of Clusters : K-Means vs Actual for n_clusters=3"
    ]
   },
   {
